got jpackager working, need to adjust build itself, though